<resources>
    <string name="app_name">On-Board Kiosk</string>
    <string name="not_device_owner">You are not device owner</string>
    <string name="device_owner">You are admin!</string>
    <string name="stop_lock_task">Stop lock</string>
    <string name="start_lock_task">Open URL</string>
    <string name="install">Install application</string>
    <string name="url_hint">Enter URL&#8230;</string>
    <string name="storage_key">pl.snowdog.kios.storage</string>
    <string name="url_key">URL</string>
    <string name="edit_key">EDIT</string>
    <string name="pin_key">PIN</string>
    <string name="dialog_title">Please enter the PIN</string>
    <string name="dialog_wrong">Wrong PIN</string>
    <string name="url_wrong">URL is not valid</string>
    <string name="pin_hint">Enter PIN&#8230;</string>
    <string name="pin_wrong">PIN is not valid</string>
    <string name="autostart">AUTOSTART</string>
    <string name="audio_volume">AUDIO_VOLUME</string>
    <string name="reload_time">RELOAD_TIME</string>
    <string name="reload_time_hint">Reload Time HH:MM</string>
</resources>
