<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.snowdog.kiosk.MainActivity">

    <!-- Scroll if needed on small screens -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingTop="50dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center">

        <!-- Title -->

        <!-- URL -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/url_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="80dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- PIN -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/pin_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtUrl">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Reload time -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ttReloadTimeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/reload_time_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ttReloadTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Autostart -->

        <!-- Buttons in a horizontal chain -->
        <CheckBox
            android:id="@+id/cbKioskAutostart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/autostart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ttReloadTimeLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btStopLockTask"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/stop_lock_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btStartLockTask"
            app:layout_constraintTop_toTopOf="@id/btStartLockTask" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btStartLockTask"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="@string/start_lock_task"
            app:layout_constraintEnd_toStartOf="@id/btStopLockTask"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbKioskAutostart" />

        <!-- Bottom padding anchor -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:text="@string/start_lock_task"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/btStopLockTask"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbKioskAutostart" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btStartLockTask" />

        <TextView
            android:id="@+id/tvAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Lautstärke"
            app:layout_constraintTop_toBottomOf="@+id/ttReloadTimeLayout"
            tools:layout_editor_absoluteX="24dp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sbAudioVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="2"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="10"
            app:labelBehavior="floating"
            app:layout_constraintTop_toBottomOf="@+id/tvAudio"
            tools:layout_editor_absoluteX="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
